# merkle-file-syncer

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md
src/client/: CMakeLists.txt  FileClient.cpp  FileClient.h  main.cpp
src/common/: CMakeLists.txt  FileHasher.cpp  FileHasher.h
src/common/communication/: CMakeLists.txt  Messages.cpp  Messages.h
src/common/filesystem/: CMakeLists.txt  FileTree.cpp  FileTree.h  FileTreeFactory.h  MerkleTree.cpp  MerkleTree.h  SimpleFileTree.cpp  SimpleFileTree.h
src/common/merkle_tree/: CMakeLists.txt  merkle.cpp
src/common/storage/: CMakeLists.txt  FileDb.cpp  FileDb.h  FileStorage.h  LocalFileStorage.cpp  LocalFileStorage.h  S3FileStorage.cpp  S3FileStorage.h
src/server/: CMakeLists.txt  FileServer.cpp  FileServer.h  main.cpp
tests/: CMakeLists.txt  main.cpp  sync_tests.cpp  tests.cpp  tree_tests.cpp
